<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">集运集运</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_rksj">RKSJActivity</string>
    <string name="title_activity_jhxj">JHXJActivity</string>
    <string name="title_activity_fjcc">FJCCActivity</string>
    <string name="title_activity_cjgz">CJGZActivity</string>
    <string name="title_activity_pd">PDActivity</string>
    <string name="title_activity_kdyjd">KDYJDActivity</string>
    <string name="express_no">单号：</string>
    <string name="warehouse">仓库：</string>
    <string name="user">用户：</string>
    <string name="outwto">发件出仓</string>
    <string name="next_stop">下一站：</string>
    <string name="package_no">袋号/主单号：</string>
    <string name="scanned_num">已扫描数：</string>
    <string name="out_express_num">主单号：</string>
    <string name="find_package">找货：</string>
    <string name="express_company">同行客户：</string>
    <string name="version_code">版本号：</string>
    <string name="login_username">登陆账号：</string>
    <string name="login_password">登陆密码：</string>
    <string name="login">登录</string>
    <string name="rcominfo">深圳市瑞康信息科技有限公司©</string>
    <string name="rcoinfo">深圳市瑞康信息科技有限公司©</string>
    <string name="check_package_where">盘点</string>
    <string name="location_num">库位条码：</string>
    <string name="fix_location">固定</string>
    <string name="in_w_on_l">入库上架</string>
    <string name="download_progress">下载进度：</string>
    <string name="login_error">账号或密码错误</string>
    <string name="RKSJ">入库上架</string>
    <string name="JHXJ">拣货下架</string>
    <string name="FJCC">核单打包</string>
    <string name="CJGZ">查件跟踪</string>
    <string name="PD">盘点</string>
    <string name="KDYJD">快递员交单</string>
    <string name="net_error">网络错误</string>
    <string name="url_error">网址错误</string>
    <string name="json_error">获取版本信息失败</string>
    <string name="login_success">登录成功</string>
    <string name="no_new_version">无新版本</string>
    <string name="kuiwei_notnull">库位号不能为空</string>
    <string name="loging">正在登陆>>></string>
    <string name="please_wait">请稍后...</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="actionBar">仓库：东莞仓，用户：许一早</string>

</resources>
