<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jyxt.rcominfo.com.jyxt.Activity.PDActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#e9e7ef">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="/盘点/ 仓库：东莞仓，用户：许一早"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_info_menu"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_package_where"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_num"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:weightSum="3"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ed_rksj_kuwei"
            android:singleLine="true"
            android:textSize="30sp"
            android:imeOptions="actionNone"
            android:background="@android:drawable/edit_text"
            android:layout_weight="2"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/cb_fix"
            android:text="@string/fix_location"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/express_no"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed_rksj_kuaijian"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:textSize="30dp"
        android:imeOptions="actionNone"
        android:background="@android:drawable/edit_text"
        />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/scanned_num"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:textSize="18dp"/>-->


    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="0"-->
        <!--android:textColor="@android:color/holo_red_light"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:textSize="30sp"-->
        <!--/>-->
</LinearLayout>
