<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jyxt.rcominfo.com.jyxt.Activity.FJCCActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9e7ef"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_info_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text=" 仓库：东莞仓，用户：许一早" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="发件出仓"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/next_stop" />




        <Spinner
            android:id="@+id/sp_fjcc"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            />


    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/package_no" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="6" >



        <EditText
            android:id="@+id/ed_fjcc_package"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_weight="4"
            android:textSize="25sp"
            android:background="@android:drawable/edit_text"
            android:imeOptions="actionNone" />
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="固定"
            android:layout_weight="2"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/cb_fjcc"/>
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:text="@string/express_no" />

    <EditText
        android:id="@+id/ed_fjcc_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:background="@android:drawable/edit_text"
        android:imeOptions="actionNone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/scanned_num" />

    <TextView
        android:id="@+id/num_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="0"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp" />

</LinearLayout>
