<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.KDYJDActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9e7ef"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_info_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:text=" 仓库：东莞仓，用户：许一早" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:text="@string/express_company" />

    <Spinner
        android:id="@+id/sp_kdyjd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="25sp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/express_no" />

    <EditText
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:layout_marginLeft="15dp"
        android:id="@+id/ed_kdyjd_num"
        android:imeOptions="actionNone"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/scanned_num" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_kdyjd_num"
        android:textColor="@android:color/holo_red_light"/>

</LinearLayout>
